# tools

./: .gitignore  LICENSE  LISMOI.md  README.md
.github/workflows/: build.yml  release-python.yml  release.yml
android/: LISMOI.md  README.md
android/book-reader/: LISMOI.md  README.md  settings.gradle.kts
android/book-reader/app/: build.gradle.kts  proguard-rules.pro
android/trilingua/: .gitignore  .gitmodules  LISMOI.md  README.md  VERIFICATION.md  gradle.properties  settings.gradle.kts
android/trilingua/app/: build.gradle.kts  proguard-rules.pro
android/trilingua/gradle/: libs.versions.toml
android/trilingua/native-ct2/: build.gradle.kts
android/trilingua/native-ct2/src/main/cpp/: CMakeLists.txt  ct2_jni.cpp
android/trilingua/native-whisper/: build.gradle.kts
android/trilingua/native-whisper/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
android/trilingua/scripts/: bench-apk.sh  build-native.sh  download-models.sh  verify-assets.sh
docs/superpowers/plans/: 2026-05-03-release-pipeline.md
docs/superpowers/specs/: 2026-05-03-release-pipeline-design.md
linux/: LISMOI.md  README.md
linux/book-digitize/: LISMOI.md  README.md  book_digitize.py  install.sh  requirements.txt
linux/gamebook-digitize/: LISMOI.md  README.md  gamebook_digitize.py  html_generator.py  install.sh  requirements.txt
linux/key-detect/: Cargo.toml  Cross.toml  LISMOI.md  README.md  install-release.sh  install.sh
linux/key-detect/src/: main.rs
linux/media-compress/: LISMOI.md  README.md  compress-images  compress-videos
linux/screen-ocr/: Cargo.toml  LISMOI.md  README.md  install-release.sh
linux/screen-ocr/python/: ocr_extract.py
linux/screen-ocr/src/: main.rs
linux/threshold-filter/: Cargo.toml  Cross.toml  LISMOI.md  README.md  install-release.sh
linux/threshold-filter/src/: capture.rs  config.rs  main.rs
linux/voice-prompt/: Cargo.toml  LISMOI.md  README.md  install-release.sh  install.sh
linux/voice-prompt/python/: whisper_transcribe.py
linux/voice-prompt/src/: main.rs
linux/voice-speak/: LISMOI.md  README.md  install-release.sh  install.sh  tts_speak.py
linux/voice-speak/src/: main.rs
math-speak/: .gitignore  README.md  install.sh  pyproject.toml  pyrightconfig.json
math-speak/node/: package-lock.json  package.json  sre_daemon.js
math-speak/src/math_speak/: audio.py  classify.py  cli.py  config.py  daemon.py  hotkey.py  selection.py  settings_ui.py  tray.py  tts.py
math-speak/src/math_speak/normalize/: __init__.py  fr_polish.py  latex_pre.py  llm_rewrite.py  sre_client.py  unicode_table.py
math-speak/systemd/: math-speakd.service
math-speak/tests/: test_classify.py  test_config.py  test_normalize_pipeline.py  test_unicode_table.py
model-manager/: Cargo.toml
model-manager/src/: catalog.rs  downloader.rs  lib.rs  user_models.rs  verify.rs
screen-ocr/: install.sh
screen-ocr/src-tauri/: Cargo.toml  tauri.conf.json
screen-ocr/src-tauri/capabilities/: default.json
screen-ocr/src-tauri/src/: capture.rs  clipboard.rs  config.rs  display.rs  hotkey.rs  lib.rs  main.rs  ocr.rs  paths.rs  pipeline.rs  region.rs  tts.rs  typing.rs
screen-ocr/src-tauri/src/commands/: config.rs  hotkey.rs  mod.rs
screen-ocr/ui/: package-lock.json  package.json  vite.config.ts
steamdeck/: LISMOI.md  README.md
steamdeck/deck-reader/: Cargo.toml  LISMOI.md  README.md  install-release.sh  install.bat  install.sh  post-update-fix.desktop  post-update-fix.sh  requirements.txt
steamdeck/deck-reader/.cargo/: config.toml
steamdeck/deck-reader/python/: gui_window.py  ocr_extract.py  tts_daemon.py  tts_speak.py
steamdeck/deck-reader/src/: main.rs
steamdeck/deck-reader/src/platform/: linux.rs  mod.rs  windows.rs
steamdeck/screen-ocr/: LISMOI.md  README.md  install.sh
steamdeck/threshold-filter/: Cargo.toml  LISMOI.md  README.md  install.sh
steamdeck/threshold-filter/.cargo/: config.toml
steamdeck/threshold-filter/src/: capture.rs  config.rs  main.rs  processing.rs  ui.rs
steamdeck/voice-prompt/: LISMOI.md  README.md
steamdeck/voice-speak/: Cargo.toml  LISMOI.md  README.md  install.sh  requirements.txt  tts_speak.py
steamdeck/voice-speak/src/: main.rs
threshold-filter/: install.sh
threshold-filter/src-tauri/: Cargo.toml  tauri.conf.json
threshold-filter/src-tauri/capabilities/: default.json
threshold-filter/src-tauri/src/: config.rs  lib.rs  main.rs
threshold-filter/src-tauri/src/commands/: config.rs  hotkey.rs  mod.rs  overlay.rs
threshold-filter/src-tauri/src/overlay/: hotkey.rs  mod.rs  ui.rs
threshold-filter/ui/: package.json  vite.config.ts
voice-prompt/: CHANGELOG.md  LISEZMOI.md  README.md  TESTING.md  install.ps1  install.sh  voice-prompt
voice-prompt/python/: whisper_daemon.py
voice-prompt/python/tests/: test_whisper_daemon.py
voice-prompt/src-tauri/: Cargo.toml  tauri.conf.json
voice-prompt/src-tauri/capabilities/: default.json
voice-prompt/src-tauri/src/: audio_in.rs  config.rs  events.rs  hotkey.rs  injection.rs  lib.rs  main.rs  paths.rs  whisper.rs
voice-prompt/src-tauri/src/commands/: config.rs  hotkey.rs  mod.rs  models.rs
voice-prompt/ui/: package-lock.json  package.json  vite.config.ts
voice-prompt/ui/src/: app.css
voice-speak/: LISEZMOI.md  README.md  install.ps1  install.sh  voice-speak
voice-speak/python/: piper_daemon.py
voice-speak/src-tauri/: Cargo.toml  tauri.conf.json
voice-speak/src-tauri/capabilities/: default.json
voice-speak/src-tauri/src/: audio.rs  clipboard.rs  config.rs  events.rs  hotkey.rs  lib.rs  main.rs  paths.rs  piper.rs
voice-speak/src-tauri/src/commands/: config.rs  hotkey.rs  models.rs
voice-speak/ui/: .gitignore  package-lock.json  package.json  vite.config.ts
voice-speak/ui/src/: app.css
windows/: LISMOI.md  README.md
windows/deck-reader/: Cargo.toml  LISMOI.md  README.md  install.ps1
windows/deck-reader/python/: tts_speak.py
windows/deck-reader/src/: main.rs
windows/deck-reader/src/platform/: windows.rs
windows/threshold-filter/: Cargo.toml  LISMOI.md  README.md  install.sh
windows/threshold-filter/src/: capture.rs  main.rs  ui.rs
(+99 files in other folders)
