[package]
name = "model-manager"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
reqwest      = { version = "0.13", features = ["stream", "json"] }
futures-util = "0.3"
tokio        = { version = "1", features = ["full"] }
tokio-util   = "0.7"
sha2         = "0.10"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
