[package]
name = "screen-ocr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "screen-ocr"
path = "src/main.rs"

[lib]
name = "screen_ocr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri                        = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell           = "2"
tauri-plugin-fs              = "2"
tauri-plugin-dialog          = "2"
tauri-plugin-notification    = "2"
serde                        = { version = "1", features = ["derive"] }
serde_json                   = "1"
tokio                        = { version = "1", features = ["full"] }
rdev                         = "0.5"
anyhow                       = "1"
arboard                      = "3"
dirs                         = "6"
tempfile                     = "3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.2"
