[package]
name = "threshold-filter-deck"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "SteamDeck threshold filter overlay (Wayland/grim/slurp)"

[[bin]]
name = "threshold-filter-deck"
path = "src/main.rs"

[dependencies]
eframe            = "0.31"
egui              = "0.31"
xcap              = "0.4.1"
image             = { version = "0.25", default-features = false, features = ["png"] }
raw-window-handle = "0.6"
rdev              = "0.5"
anyhow            = "1"
log               = "0.4"
env_logger        = "0.11"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
toml              = "0.8"
tempfile          = "3"
