[package]
name = "threshold-filter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "threshold-filter"
path = "src/main.rs"

[lib]
name = "threshold_filter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri                        = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell           = "2"
tauri-plugin-fs              = "2"
tauri-plugin-dialog          = "2"
serde                        = { version = "1", features = ["derive"] }
serde_json                   = "1"
toml                         = "0.8"
tokio                        = { version = "1", features = ["full"] }
rdev                         = "0.5"
anyhow                       = "1"
dirs                         = "6"
log                          = "0.4"
env_logger                   = "0.11"
eframe                       = "0.31"
egui                         = "0.31"
image                        = { version = "0.25", default-features = false }
raw-window-handle            = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
xcap = "0.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
xcap        = { version = "0.8", features = ["wgc"] }
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
