[package]
name = "deck-reader"
version = "0.1.0"
edition = "2021"

# ─────────────────────────────────────────────
# Dependency rationale
# ─────────────────────────────────────────────
# rdev        – Global key-event listener (cross-platform)
# anyhow      – Ergonomic error propagation with context messages
# ctrlc       – Catches Ctrl-C so we can shut down cleanly
# tempfile    – Auto-cleanup temp PNG for OCR captures
# serde       – Serialization for region JSON and config
# serde_json  – Persist OCR region geometry to disk
# toml        – Parse ~/.config/deck-reader/config.toml
# dirs        – Cross-platform XDG / KnownFolder path resolution
# shellexpand – Portable ~/ expansion (HOME on unix, USERPROFILE on Windows)
#
# Linux-only (cfg(unix)):
# libc        – setsid() + kill() for TTS process group isolation
#
# Windows-only (cfg(windows)) — phase 2 subtasks 1.4–1.6:
# arboard     – System clipboard (Win32 DataExchange wrapper)
# xcap        – Screen capture; 0.8 with wgc feature matches the
#               tools-public/windows/threshold-filter sibling and captures
#               DirectX/Vulkan game windows on Win10/11
# eframe/egui – Fullscreen overlay for region selection (no slop/slurp
#               equivalent exists on Windows; versions pinned to match
#               threshold-filter to avoid dep graph drift)
# windows     – Win32 Job Objects for process-tree kill (direct analogue of
#               Linux setsid + kill -PGID)
# ─────────────────────────────────────────────

[[bin]]
name = "deck-reader"
path = "src/main.rs"

[dependencies]
rdev        = "0.5"
anyhow      = "1"
ctrlc       = { version = "3", features = ["termination"] }
tempfile    = "3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
dirs        = "5"
shellexpand = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
arboard = "3"
image   = "0.25"
xcap    = { version = "0.8", features = ["wgc"] }
eframe  = "0.31"
egui    = "0.31"
windows = { version = "0.58", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }
